# crewai_flow

./: .gitignore  README.md  fun_fact.txt  pyproject.toml
src/flow_crewai/: promte_chaining_flow.py  router_flow.py  simple_flow.py
